# DOOM

./: Makefile.am  configure.ac
doom/: Makefile  Makefile.am  doomdef.h  i_system.c  i_video.c  m_misc.c  p_mobj.c  r_data.c  r_main.c  w_wad.c  w_wad.h
linuxdoom-1.10/: i_sound.c  i_system.c  m_menu.c  m_misc.c  p_enemy.c  st_stuff.c
sndserv/: linux.c  soundsrv.c
src/: Makefile.am
