AUX_DIST_GEN =                          \
        $(ac_aux_dir)/config.guess      \
        $(ac_aux_dir)/config.sub        \
        $(ac_aux_dir)/install-sh        \
        $(ac_aux_dir)/missing

EXTRA_DIST =        \
	$(AUX_DIST_GEN) \
    config.h    	\
    AUTHORS         \
    NEWS            \
	Changelog		\
	DOOMLIC.TXT		\
	FILES			\
	FILES2			\
	README.asm		\
	README.b		\
	README.book		\
	README.gl		\
	README.sound    \
	TODO

MAINTAINERCLEANFILES =  $(AUX_DIST_GEN)

docdir=$(prefix)/share/doc/@PACKAGE@
SUBDIRS=src
